Add BananaGear dashboard entry
xlxfoxxlx:
-update to P, add oval background
-update to ten
-update to eleven

Change-Id: Iaf927e8fef982681e6d485ea4e878b6c988a6596
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>
Signed-off-by: Rizky Benggolo <travarilo@gmail.com>

--- a/res/values/banana_strings.xml
+++ b/res/values/banana_strings.xml
@@ -21,6 +21,10 @@
     <string name="banana_version_default">Unknown</string>
     <string name="keywords_banana_version">banana version</string>
 
+    <!-- BananaGear -->
+    <string name="bananagear_title">Banana Gear</string>
+    <string name="bananagear_summary">Fulfill your Gear!</string>
+
     <string name="theme_category">Theming</string>
     <string name="theme_select_title">Themes</string>
     <string name="theme_select_summary">Browse and select installed themes</string>
