--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -47,6 +47,14 @@
         android:fragment="com.android.settings.applications.AppAndNotificationDashboardFragment"/>
 
     <Preference
+        android:key="top_level_bananagear"
+        android:title="@string/bananagear_title"
+        android:summary="@string/bananagear_summary"
+        android:icon="@drawable/ic_homepage_bananagear"
+        android:order="-95"
+        android:fragment="com.banana.settings.BananaGear"/>
+
+    <Preference
         android:key="top_level_battery"
         android:title="@string/power_usage_summary_title"
         android:summary="@string/summary_placeholder"
