--- a/res/values/banana_strings.xml
+++ b/res/values/banana_strings.xml
@@ -21,6 +21,10 @@
     <string name="banana_version_default">Unknown</string>
     <string name="keywords_banana_version">banana version</string>
 
+    <!-- BananaGear -->
+    <string name="bananagear_title">Banana Gear</string>
+    <string name="bananagear_summary">Fulfill your Gear!</string>
+
     <!-- SELinux Status -->
     <string name="selinux_status">SELinux status</string>
     <string name="selinux_status_disabled">Disabled</string>
