--- a/res/values/banana_strings.xml
+++ b/res/values/banana_strings.xml
@@ -88,4 +88,10 @@
 
     <!-- Black theme -->
     <string name="darker_theme_enable">Enable black theme</string>
+
+    <!-- Hardware info -->
+    <!-- Label for device's hardware platform value [CHAR LIMIT=40] -->
+    <string name="platform_revision">Platform</string>
+    <!-- Label for device's hardware ram size [CHAR LIMIT=40] -->
+    <string name="total_ram">Total RAM</string>
 </resources>
