--- a/res/values/banana_strings.xml
+++ b/res/values/banana_strings.xml
@@ -86,4 +86,7 @@
     <string name="platform_revision">Platform</string>
     <!-- Label for device's hardware ram size [CHAR LIMIT=40] -->
     <string name="total_ram">Total RAM</string>
+
+    <string name="about_device_name">Device</string>
+    <string name="build_date">Build date</string>
 </resources>
