--- a/res/values/banana_strings.xml
+++ b/res/values/banana_strings.xml
@@ -97,4 +97,9 @@
 
     <string name="about_device_name">Device</string>
     <string name="build_date">Build date</string>
+
+    <!-- FP swipe to dismiss notification -->
+    <string name="fp_swipe_to_dismiss_notifications_title">Swipe fingerprint left or right to dismiss notifications</string>
+    <string name="fp_swipe_to_dismiss_notifications_summary">To dismiss your notifications, swipe left or right on the fingerprint sensor on the back of your phone.</string>
+
 </resources>
