Settings: Add theming section to Display Settings
Change-Id: I136ccd767a394bedb6475c02d0a8bb05cb1cc17a

--- a/res/values/banana_strings.xml
+++ b/res/values/banana_strings.xml
@@ -73,4 +73,10 @@
 
     <!-- Title for connected TWS device group [CHAR LIMIT=none]-->
     <string name="connected_tws_device_saved_title">Saved Earbuds</string>
+
+    <!-- Themes -->
+    <string name="theme_category">Theming</string>
+    <string name="theme_select_title">Themes</string>
+    <string name="theme_select_summary">Browse and select installed themes</string>
+
 </resources>
