Settings: Add theming section to Display Settings
Change-Id: I136ccd767a394bedb6475c02d0a8bb05cb1cc17a

--- a/res/values/banana_strings.xml
+++ b/res/values/banana_strings.xml
@@ -21,4 +21,8 @@
     <string name="banana_version_default">Unknown</string>
     <string name="keywords_banana_version">banana version</string>
 
+    <string name="theme_category">Theming</string>
+    <string name="theme_select_title">Themes</string>
+    <string name="theme_select_summary">Browse and select installed themes</string>
+
 </resources>
