--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -31,15 +31,6 @@
         <intent android:action="com.android.intent.action.SHOW_BRIGHTNESS_DIALOG" />
     </com.android.settingslib.RestrictedPreference>
 
-    <com.android.settings.display.darkmode.DarkModePreference
-        android:key="dark_ui_mode"
-        android:title="@string/dark_ui_mode"
-        android:fragment="com.android.settings.display.darkmode.DarkModeSettingsFragment"
-        android:widgetLayout="@null"
-        settings:widgetLayout="@null"
-        settings:controller="com.android.settings.display.DarkUIPreferenceController"
-        settings:keywords="@string/keywords_dark_ui_mode"/>
-
     <com.android.settings.display.NightDisplayPreference
         android:key="night_display"
         android:title="@string/night_display_title"
@@ -154,5 +145,29 @@
         android:key="vr_display_pref"
         android:title="@string/display_vr_pref_title"
         android:fragment="com.android.settings.display.VrDisplayPreferencePicker" />
+
+    <PreferenceCategory
+        android:key="theme_category"
+        android:title="@string/theme_category">
+
+        <com.android.settings.display.darkmode.DarkModePreference
+            android:key="dark_ui_mode"
+            android:title="@string/dark_ui_mode"
+            android:fragment="com.android.settings.display.darkmode.DarkModeSettingsFragment"
+            android:widgetLayout="@null"
+            settings:widgetLayout="@null"
+            settings:controller="com.android.settings.display.DarkUIPreferenceController"
+            settings:keywords="@string/keywords_dark_ui_mode"/>
+
+        <Preference
+            android:key="theme_select_activity"
+            android:title="@string/theme_select_title"
+            android:summary="@string/theme_select_summary"
+            android:persistent="false" >
+            <intent android:action="android.intent.action.MAIN"
+                    android:targetPackage="com.android.wallpaper"
+                    android:targetClass="com.android.customization.picker.CustomizationPickerActivity" />
+        </Preference>
+    </PreferenceCategory>
 
 </PreferenceScreen>
