Settings: support black theme for dark mode [2/3]
Change-Id: I12451c0b72f73b08b885e8103bbe3e74a0c4e19f
Signed-off-by: Jesse Chan <jc@lineageos.org>

--- a/res/values/banana_strings.xml
+++ b/res/values/banana_strings.xml
@@ -94,4 +94,6 @@
     <string name="fp_swipe_to_dismiss_notifications_title">Swipe fingerprint left or right to dismiss notifications</string>
     <string name="fp_swipe_to_dismiss_notifications_summary">To dismiss your notifications, swipe left or right on the fingerprint sensor on the back of your phone.</string>
 
+    <!-- Black theme -->
+    <string name="darker_theme_enable">Enable black theme</string>
 </resources>
