Settings: support black theme for dark mode [2/3]
Change-Id: I12451c0b72f73b08b885e8103bbe3e74a0c4e19f
Signed-off-by: Jesse Chan <jc@lineageos.org>

--- a/res/values/banana_strings.xml
+++ b/res/values/banana_strings.xml
@@ -85,4 +85,7 @@
     <!-- Battery stats reset -->
     <string name="battery_stats_reset">Reset stats</string>
     <string name="battery_stats_message">Battery history stats are going to be reset</string>
+
+    <!-- Black theme -->
+    <string name="darker_theme_enable">Enable black theme</string>
 </resources>
