SystemUI: Implement hide gestural navigation hint bar [2/2]
Change-Id: I1df01a706fffbfcb97761e2ff5fdfc8eaefff036

--- a/res/values/banana_strings.xml
+++ b/res/values/banana_strings.xml
@@ -106,4 +106,7 @@
     <string name="fp_swipe_to_dismiss_notifications_title">Swipe fingerprint left or right to dismiss notifications</string>
     <string name="fp_swipe_to_dismiss_notifications_summary">To dismiss your notifications, swipe left or right on the fingerprint sensor on the back of your phone.</string>
 
+    <!-- Gestures Navbar -->
+    <string name="show_gestures_navbar_switch_title">Show pill</string>
+    <string name="show_gestures_navbar_switch_summary">Show gestures navbar</string>
 </resources>
